<resources>
    <string name="app_name" translatable="false">PlayStation</string>

    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="home">Home</string>
    <string name="reports">Reports</string>
    <string name="logout">Logout</string>
    <string name="consoles">Consoles</string>
    <string name="no_internet_connection">Check Your Internet Connection</string>
    <string name="cafe_orders">Cafe Orders</string>
    <string name="start_date">Start Date</string>
    <string name="single_or_multi">Single_Multi</string>
    <string name="username_required">Username Required.</string>
    <string name="password_required">Password Required.</string>
    <string name="date_from_required">Date From Is Required.</string>
    <string name="date_to_required">Date To Is Required.</string>
    <string name="categories">Categories</string>
    <string name="price">Price</string>
    <string name="amount">Amount</string>
    <string name="refresh">Refresh</string>

    <string name="save">Save</string>
    <string name="ip_address">IP Address</string>
    <string name="empty_ip_address_error">IP Address Can\'t Be Empty.</string>
    <string name="saved">Saved</string>
    <string name="ip_key" translatable="false">IP_KEY</string>
    <string name="ip_shared_preference_name" translatable="false">IP</string>
    <string name="wrong_password">Wrong Password.</string>
    <string name="username_not_found">Username Not Found.</string>
    <string name="user_shared_preferences_name" translatable="false">user</string>
    <string name="username_key" translatable="false">username_key</string>
    <string name="user_title_key" translatable="false">userTitle_key</string>
    <string name="display">Display</string>
    <string name="set_ip_address">Set Ip Address</string>
    <string name="total">Total:</string>
    <string name="bill_date">Bill Date</string>
    <string name="all">All</string>
    <string name="no_data_to_display">NO DATA TO DISPLAY.</string>
    <string name="select_shift">Select Shift</string>
    <string name="log">Log</string>

    <string name="last_actions">Last Actions</string>
    <string name="reset_ip">Reset IP Address</string>
    <string name="export_as_pdf">Export as pdf</string>
    <string name="report_type">Report Type</string>
    <string name="shift">Shift</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="cafe">Cafe</string>
    <string name="console">Console</string>
    <string name="date">Date</string>
    <string name="summary">Summary</string>
    <string name="mini_value">Mini Value</string>
    <string name="cafe_value">Cafe Value</string>
    <string name="net_profit">Net Profit</string>
    <string name="play_value">Play Value</string>
    <string name="outs_value">Outs Value</string>
    <string name="outs">Outs</string>
    <string name="type">Type</string>
    <string name="value">Value</string>
    <string name="notes">Notes</string>
    <string name="create_pdf_file">Create PDF File</string>
    <string name="details">Details</string>
</resources>
