<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_report"
        android:title="@string/reports"
        android:icon="@drawable/ic_reports"/>

    <item android:id="@+id/action_ip"
        android:title="@string/set_ip_address"
        android:icon="@drawable/ic_settings"/>

    <item android:id="@+id/action_refresh"
        android:title="@string/refresh"
        app:showAsAction="always"
        android:icon="@drawable/ic_refresh"/>

    <item
        android:id="@+id/action_last_actions"
        android:title="@string/last_actions" />

    <item android:id="@+id/action_logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout"/>
</menu>