<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_accent_color_rounded"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/tv_amount"
        style="@style/SmallHeadLineTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/amount" />

    <TextView
        android:id="@+id/tv_category"
        style="@style/SmallHeadLineTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/categories" />

    <TextView
        android:id="@+id/tv_price"
        style="@style/SmallHeadLineTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/price" />
</LinearLayout>