<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@drawable/item_background"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier3"
        style="@style/SmallHeadLineTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="textView11,textView25,textView28,textView31,textView34"
        tools:layout_editor_absoluteX="403dp" />

    <TextView
        android:id="@+id/textView10"
        style="@style/SmallHeadLineTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/cafe_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text=":"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textView10" />

    <TextView
        android:id="@+id/tv_cafe_val"
        style="@style/SmallHeadLineTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier3"
        app:layout_constraintTop_toTopOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView25"
        style="@style/SmallHeadLineTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/mini_value"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text=":"
        app:layout_constraintBottom_toBottomOf="@+id/textView25"
        app:layout_constraintStart_toEndOf="@+id/textView25"
        app:layout_constraintTop_toTopOf="@+id/textView25" />

    <TextView
        android:id="@+id/tv_mini_val"
        style="@style/SmallHeadLineTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/textView25"
        app:layout_constraintEnd_toEndOf="@+id/tv_cafe_val"
        app:layout_constraintStart_toStartOf="@+id/tv_cafe_val"
        app:layout_constraintTop_toTopOf="@+id/textView25" />

    <TextView
        android:id="@+id/textView28"
        style="@style/SmallHeadLineTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/net_profit"
        app:layout_constraintStart_toStartOf="@+id/textView31"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text=":"
        app:layout_constraintBottom_toBottomOf="@+id/textView28"
        app:layout_constraintStart_toEndOf="@+id/textView28"
        app:layout_constraintTop_toTopOf="@+id/textView28" />

    <TextView
        android:id="@+id/tv_net_profit"
        style="@style/SmallHeadLineTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/textView28"
        app:layout_constraintEnd_toEndOf="@+id/tv_mini_val"
        app:layout_constraintStart_toStartOf="@+id/tv_mini_val"
        app:layout_constraintTop_toTopOf="@+id/textView28" />

    <TextView
        android:id="@+id/textView31"
        style="@style/SmallHeadLineTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/play_value"
        app:layout_constraintStart_toStartOf="@+id/textView25"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text=":"
        app:layout_constraintBottom_toBottomOf="@+id/textView31"
        app:layout_constraintStart_toEndOf="@+id/textView31"
        app:layout_constraintTop_toTopOf="@+id/textView31" />

    <TextView
        android:id="@+id/tv_play_value"
        style="@style/SmallHeadLineTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/textView31"
        app:layout_constraintEnd_toEndOf="@+id/tv_net_profit"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tv_net_profit"
        app:layout_constraintTop_toTopOf="@+id/textView31" />

    <TextView
        android:id="@+id/textView34"
        style="@style/SmallHeadLineTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/outs_value"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView28"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text=":"
        app:layout_constraintBottom_toBottomOf="@+id/textView34"
        app:layout_constraintStart_toEndOf="@+id/textView34"
        app:layout_constraintTop_toTopOf="@+id/textView34" />

    <TextView
        android:id="@+id/tv_outs_val"
        style="@style/SmallHeadLineTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/textView34"
        app:layout_constraintEnd_toEndOf="@+id/tv_play_value"
        app:layout_constraintStart_toStartOf="@+id/tv_play_value"
        app:layout_constraintTop_toTopOf="@+id/textView34" />

</androidx.constraintlayout.widget.ConstraintLayout>