<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@drawable/item_background"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier3"
        style="@style/SmallHeadLineTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="textView11,textView26,textView29,textView32,textView35"
        tools:layout_editor_absoluteX="403dp" />

    <TextView
        android:id="@+id/textView10"
        style="@style/SmallHeadLineTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/shift"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text=":"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textView10" />

    <TextView
        android:textAlignment="viewStart"
        android:id="@+id/tv_shift_name"
        style="@style/SmallHeadLineTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier3"
        app:layout_constraintTop_toTopOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView25"
        style="@style/SmallHeadLineTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text=":"
        app:layout_constraintBottom_toBottomOf="@+id/textView25"
        app:layout_constraintStart_toEndOf="@+id/textView25"
        app:layout_constraintTop_toTopOf="@+id/textView25" />

    <TextView
        android:textAlignment="viewStart"
        android:id="@+id/tv_date"
        style="@style/SmallHeadLineTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/textView25"
        app:layout_constraintEnd_toEndOf="@+id/tv_shift_name"
        app:layout_constraintStart_toStartOf="@+id/tv_shift_name"
        app:layout_constraintTop_toTopOf="@+id/textView25" />

    <TextView
        android:id="@+id/textView28"
        style="@style/SmallHeadLineTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/value"
        app:layout_constraintStart_toStartOf="@+id/textView31"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":"
        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
        app:layout_constraintStart_toEndOf="@+id/imageView10"
        app:layout_constraintTop_toTopOf="@+id/imageView10" />

    <TextView
        android:textAlignment="viewStart"
        android:id="@+id/tv_value"
        style="@style/SmallHeadLineTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/textView28"
        app:layout_constraintEnd_toEndOf="@+id/tv_date"
        app:layout_constraintStart_toStartOf="@+id/tv_date"
        app:layout_constraintTop_toTopOf="@+id/textView28" />

    <TextView
        android:id="@+id/textView31"
        style="@style/SmallHeadLineTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/type"
        app:layout_constraintStart_toStartOf="@+id/textView25"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text=":"
        app:layout_constraintBottom_toBottomOf="@+id/textView31"
        app:layout_constraintStart_toEndOf="@+id/textView31"
        app:layout_constraintTop_toTopOf="@+id/textView31" />

    <TextView
        android:textAlignment="viewStart"
        android:id="@+id/tv_type"
        style="@style/SmallHeadLineTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/textView31"
        app:layout_constraintEnd_toEndOf="@+id/tv_value"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tv_value"
        app:layout_constraintTop_toTopOf="@+id/textView31" />

    <TextView
        android:id="@+id/textView34"
        style="@style/SmallHeadLineTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView28"
        app:layout_constraintTop_toBottomOf="@+id/textView28"
        app:layout_constraintTop_toTopOf="@+id/tv_notes"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text=":"
        app:layout_constraintBottom_toBottomOf="@+id/textView34"
        app:layout_constraintStart_toEndOf="@+id/textView34"
        app:layout_constraintTop_toTopOf="@+id/textView34" />

    <TextView
        android:textAlignment="viewStart"
        android:id="@+id/tv_notes"
        style="@style/SmallHeadLineTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:ellipsize="end"
        android:maxLines="20"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_type"
        app:layout_constraintStart_toStartOf="@+id/tv_value"
        app:layout_constraintTop_toBottomOf="@+id/tv_value" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView28"
        app:layout_constraintStart_toEndOf="@+id/textView28"
        app:layout_constraintTop_toTopOf="@+id/textView28"
        app:srcCompat="@drawable/ic_money" />

</androidx.constraintlayout.widget.ConstraintLayout>